--- a/src/main/resources/templates/why.html
+++ b/src/main/resources/templates/why.html
@@ -1,37 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link rel="shortcut icon" href="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/images/favicon.png" type="">
-
-  <title> Finexo </title>
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- font awesome style -->
-  <link href="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/css/font-awesome.min.css" rel="stylesheet" />
-
-  <!-- Custom styles for this template -->
-  <link href="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/css/responsive.css" rel="stylesheet" />
-
+<head th:insert="blocks/header :: head">
 </head>
 
 <body class="sub_page">
