--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head th:insert="blocks/header :: head">
+<head th:insert="blocks/head :: head">
 </head>
 
 <body>
@@ -15,54 +15,9 @@
         </div>
     </div>
 
-    <!-- header section strats -->
-    <header class="header_section">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" href="index.html">
-            <span>
-              Finexo
-            </span>
-                </a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class=""> </span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav  ">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html"> About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="why.html">Why Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="team.html">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-                        </li>
-                        <form class="form-inline">
-                            <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </button>
-                        </form>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+    <header class="header_section" th:insert="blocks/header::header">
     </header>
-    <!-- end header section -->
-    <!-- slider section -->
+
     <section class="slider_section ">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -673,98 +628,8 @@
 
 <!-- info section -->
 
-<section class="info_section layout_padding2">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-3 info_col">
-                <div class="info_contact">
-                    <h4>
-                        Address
-                    </h4>
-                    <div class="contact_link_box">
-                        <a href="">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            <span>
-                  Location
-                </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span>
-                  Call +01 1234567890
-                </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <span>
-                  demo@gmail.com
-                </span>
-                        </a>
-                    </div>
-                </div>
-                <div class="info_social">
-                    <a href="">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 info_col">
-                <div class="info_detail">
-                    <h4>
-                        Info
-                    </h4>
-                    <p>
-                        necessary, making this the first true generator on the Internet. It uses a dictionary of over
-                        200 Latin words, combined with a handful
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-2 mx-auto info_col">
-                <div class="info_link_box">
-                    <h4>
-                        Links
-                    </h4>
-                    <div class="info_links">
-                        <a class="active" href="index.html">
-                            Home
-                        </a>
-                        <a class="" href="about.html">
-                            About
-                        </a>
-                        <a class="" href="service.html">
-                            Services
-                        </a>
-                        <a class="" href="why.html">
-                            Why Us
-                        </a>
-                        <a class="" href="team.html">
-                            Team
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 info_col ">
-                <h4>
-                    Subscribe
-                </h4>
-                <form action="#">
-                    <input type="text" placeholder="Enter email"/>
-                    <button type="submit">
-                        Subscribe
-                    </button>
-                </form>
-            </div>
-        </div>
-    </div>
+<section class="info_section layout_padding2" th:insert="blocks/footer::footer">
+
 </section>
 
 <!-- end info section -->
@@ -778,28 +643,6 @@
         </p>
     </div>
 </section>
-<!-- footer section -->
-
-<!-- jQery -->
-<script type="text/javascript"
-        src="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/js/jquery-3.4.1.min.js"></script>
-<!-- popper js -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-</script>
-<!-- bootstrap js -->
-<script type="text/javascript"
-        src="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/js/bootstrap.js"></script>
-<!-- owl slider -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-</script>
-<!-- custom js -->
-<script type="text/javascript"
-        src="../../../../../../Finexo%20Free%20Website%20Template%20-%20Free-CSS.com/finexo-html/js/custom.js"></script>
-<!-- Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-</script>
-<!-- End Google Map -->
 
 </body>
 
